--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/assets/images/synergies.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/synergies.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/synergies.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/synergies.png" />
+    <link rel="icon" href="/assets/illustrations/bg-logos.png.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/illustrations/bg-logos.png.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/illustrations/bg-logos.png.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/illustrations/bg-logos.png.png" />
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
